# be-games

./: .env.example  .gitignore  API_USAGE.md  DEPLOYMENT.md  DEPLOY_WITHOUT_SSH.md  Makefile  QUICKSTART.md  README.md  STRUCTURE.md  SYNC_STRATEGY.md  alembic.ini  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-registry.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_create_games_tables.py
infra/docker/: Dockerfile
scripts/: update-from-registry.sh
src/game_service/: __init__.py
src/game_service/api/: __main__.py  app.py  deps.py  lifespan.py
src/game_service/api/v1/: games_router.py  genres_router.py  routers.py
src/game_service/clients/: rawg_client.py
src/game_service/core/: config.py  db.py  logging.py
src/game_service/domain/: events.py  models.py  repositories.py  services.py
src/game_service/dtos/: events.py  http.py
src/game_service/mq/: __init__.py  consumer.py  publisher.py
src/game_service/repo/sql/: __init__.py  interfaces.py  mappers.py  models.py  repositories.py
src/game_service/services/: __init__.py  game_service.py
