[project]
name = "game-service"
version = "0.1.0"
description = "Game service (FastAPI + SQLAlchemy + RAWG integration)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "rich>=13.7",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    "httpx>=0.27",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.alembic]
script_location = "alembic"

[tool.ruff]
line-length = 100

[tool.pyright]
typeCheckingMode = "basic"
